--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       </div>
       <div class="col-lg-8 col-md-7 text-center text-md-start">
         <h2 class="h1 mt-2" data-aos="fade-left" data-aos-delay="0">Jigar Bhatt</h2>
-        <p data-aos="fade-left" data-aos-delay="100">Software Engineer & Web Developer</p>
+        <p data-aos="fade-left" data-aos-delay="100">Ruby on Rails Developer</p>
         <div class="d-print-none" data-aos="fade-left" data-aos-delay="200">
           <!-- <a class="btn btn-light text-dark shadow-sm mt-1 me-1" href="Jigar Bhatt resume.pdf" target="_blank">Download CV</a> -->
           <a class="btn btn-light text-dark shadow-sm mt-1 me-1" href="https://www.linkedin.com/in/jigar-bhatt-67ab0a48/" target="_blank">View My Linkedin Profile</a>
@@ -202,7 +202,7 @@
   </div>
   <hr class="d-print-none"/>
   <div class="contant-section px-3 px-lg-4 pb-4" id="contact">
-    <h2 class="h3 text mb-3">Contact</h2>
+    <h2 class="h3 text mb-3">Contact Me</h2>
     <div class="row">
       <div class="col-md-7 d-print-none">
         <div class="my-2">
@@ -286,7 +286,7 @@
           </div>
         </div> -->
         <div class="text-small">
-          <div class="mb-1">&copy; Right Resume. All rights reserved.</div>
+          <div class="mb-1">&copy; Jigar Bhatt. All rights reserved.</div>
           <div>Design - <a href="https://templateflip.com/" target="_blank">TemplateFlip</a></div>
         </div>
       </div>
